# wasm_spec_kernel

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  example_notebook.ipynb  playground.py  pyproject.toml  test_repl.py
.binder/: postBuild  requirements.txt
.github/workflows/: ci.yaml  pre-commit.yaml
simple_wasm_kernel/: __init__.py  __main__.py  defs.py  install.py  kernel.py  replwrapper.py  wasm_replwrap.py
tests/: conftest.py  test_kernel.py  test_wasm_replwrap.py
wasm_kernel/: __init__.py  __main__.py  install.py  kernel.py
wasm_spec_kernel/: __init__.py  __main__.py  defs.py  install.py  kernel.py
