[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "wasm_kernel"
author = "Alex Wendland"
author-email = "me@alexwendland.com"
home-page = "https://github.com/awendland/wasm_kernel"
requires = ["pexpect (>=4.0)"]
description-file = "README.md"
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]

