[tool.poetry]
name = "wasm_spec_kernel"
version = "0.1.1"
description = "A Jupyter kernel for the Wasm reference interpreter"
authors = ["Alex Wendland <me@alexwendland.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/awendland/wasm_spec_kernel.git"
homepage = "https://github.com/awendland/wasm_spec_kernel"
classifiers = [
    "Framework :: IPython",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells",
]

[tool.poetry.dependencies]
pexpect = "^4.8.0"
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
jupyterlab = "^3.0.0"
mypy = "^0.790"
pytest = "^6.2.1"
toml = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
